--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
                         <li class="list-group-item"><a href="plugins_ui.html#Glamaholic">解放投影模板</a></li>
                         <li class="list-group-item"><a href="plugins_ui.html#GoodMemory">物品解鎖備註★</a></li>
                         <li class="list-group-item"><a href="plugins_ui.html#qolbar">解放快捷欄★★</a></li>
+                        <li class="list-group-item"><a href="plugins_ui.html#ping">顯示遊戲Ping</a></li>
                     </ul>
                 </div>
 
