--- a/plugins_ui.html
+++ b/plugins_ui.html
@@ -224,6 +224,15 @@
                           </tbody>
                     </table>
                 </div>
+                <div class="commonFormat mt-5" id="ping">
+                    <div class="plugintitle d-flex align-items-center mb-3">
+                        <h6 class="fs-4 d-inline mb-0 me-3">PingPlugin</h6>
+                        <a href="https://github.com/karashiiro/PingPlugin" class="btn btn-outline-secondary"
+                        target="_blank" role="button">插件原網址</a>
+                    </div>
+                    <p>顯示遊戲的Ping</p>
+                    <img src="https://raw.githubusercontent.com/karashiiro/PingPlugin/master/Assets/1.png" alt="" class="img-fluid imagebigback">
+                </div>
             </div>
         </div>
     </div>
