--- a/plugins_tweak.html
+++ b/plugins_tweak.html
@@ -13,8 +13,7 @@
     </script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="Dalamud的各種研究筆記">
-    <meta name="keywords" content="FF14,Dalamud,FF14插件">
+    <meta name="description" content="Dalamud的各種研究筆記，包含FF14的第三方插件介紹與界面粗略翻譯。">
     <meta name="author" content="BigYo">
     <meta name="viewport"
         content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no">
@@ -22,13 +21,13 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://magejiaaa.github.io/Amaurot_garden/">
     <meta property="og:title" content="亞馬烏羅提後花園">
-    <meta property="og:description" content="Dalamud的各種研究筆記">
+    <meta property="og:description" content="Dalamud的各種研究筆記，包含FF14的第三方插件介紹與界面粗略翻譯。">
     <meta property="og:site_name" content="亞馬烏羅提後花園">
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://magejiaaa.github.io/Amaurot_garden/">
     <meta property="twitter:title" content="亞馬烏羅提後花園">
-    <meta property="twitter:description" content="Dalamud的各種研究筆記">
+    <meta property="twitter:description" content="Dalamud的各種研究筆記，包含FF14的第三方插件介紹與界面粗略翻譯。">
     <meta property="twitter:image" content="https://i.imgur.com/tcf5eaU.png">
     <link rel="shortcut icon" href="./image/favicon.ico" type="image/x-icon">
     <!-- CSS -->
@@ -39,7 +38,7 @@
     <link rel="stylesheet" href="css/fix.css">
     <link href="css/all.css" rel="stylesheet">
 
-    <title>亞馬烏羅提後花園｜Simple Tweaks</title>
+    <title>Dalamud｜Simple Tweaks－亞馬烏羅提後花園</title>
 </head>
 
 
