tweak bug修復，增加sitemap

--- a/plugins_tweak.html
+++ b/plugins_tweak.html
@@ -359,178 +359,178 @@
                                     <td>允許移動戰鬥中出現的對話框。</td>
                                 </tr>
                                 <tr>
-                                    <th scope="row">4</th>
+                                    <th scope="row"></th>
                                     <td>詠唱欄修改</td>
                                     <td>可增加滑步標示<br>
                                         隱藏或移動咏唱欄的特定部分</td>
                                 </tr>
                                 <tr>
-                                    <th scope="row">5</th>
+                                    <th scope="row"></th>
                                     <td>更整潔的跨界傳送菜單</td>
                                     <td>清理跨界傳送菜單並按順序於列表中顯示當前位置。</td>
                                 </tr>
                                 <tr>
-                                    <th scope="row">6</th>
+                                    <th scope="row"></th>
                                     <td>連擊倒計時</td>
                                     <td>顯示當前連擊結束時間</td>
                                 </tr>
                                 <tr>
-                                    <th scope="row">7</th>
+                                    <th scope="row"></th>
                                     <td>自定義部隊標籤</td>
                                     <td>允許隱藏或自定部隊和放浪神加護。</td>
                                 </tr>
                                 <tr>
-                                    <th scope="row">8</th>
+                                    <th scope="row"></th>
                                     <td>自定義時間格式</td>
                                     <td>修改遊戲中時鐘的時間顯示格式，使用C#的時間顯示格式</td>
                                 </tr>
                                 <tr>
-                                    <th scope="row">9</th>
+                                    <th scope="row"></th>
                                     <td>默認賣出全部的九宮幻卡</td>
                                     <td>在賣出幻卡時，一次性出售當前幻卡的全部特有部分</td>
                                 </tr>
                                 <tr>
-                                    <th scope="row">10</th>
+                                    <th scope="row"></th>
                                     <td>Duplicate Keybind Hints Between Hotbars</td>
                                     <td>當快捷欄有重複的技能或巨集，且無設置快捷鍵，自動綁定有設快捷鍵的按鍵</td>
                                 </tr>
                                 <tr>
-                                    <th scope="row">11</th>
+                                    <th scope="row"></th>
                                     <td>分解窗口增强</td>
                                     <td>在分解窗口顯示你的當前分解等級及物品的推分解等級顯示裝備是否在套裝中，可禁止點擊套裝內裝備以防誤操作</td>
                                 </tr>
                                 <tr>
-                                    <th scope="row">12</th>
+                                    <th scope="row"></th>
                                     <td>額外傳送</td>
                                     <td>將房屋傳送選項添加到更多位置。</td>
                                 </tr>
                                 <tr>
-                                    <th scope="row">13</th>
+                                    <th scope="row"></th>
                                     <td>隱藏即將完成的成就通知</td>
                                     <td>完全隱藏登錄時/區域切換的“接近完成的成就”通知。</td>
                                 </tr>
                                 <tr>
-                                    <th scope="row">14</th>
+                                    <th scope="row"></th>
                                     <td>隱藏職業量譜</td>
                                     <td>允許在非“戰鬥”和“任務”中,隱藏職業職業量譜</td>
                                 </tr>
                                 <tr>
-                                    <th scope="row">15</th>
+                                    <th scope="row"></th>
                                     <td>檢查物品等級</td>
                                     <td>檢查其他玩家時計算他們的裝等</td>
                                 </tr>
                                 <tr>
-                                    <th scope="row">16</th>
+                                    <th scope="row"></th>
                                     <td>檢查物品等級</td>
                                     <td>檢查其他玩家時計算他們的裝等，紅色值表示玩家穿戴的物品可以根據其等級進行同步，並顯示最高級別。</td>
                                 </tr>
                                 <tr>
-                                    <th scope="row">17</th>
+                                    <th scope="row"></th>
                                     <td>大號冷卻倒計時</td>
                                     <td>放大快捷欄上的冷卻例計時。</td>
                                 </tr>
                                 <tr>
-                                    <th scope="row">18</th>
+                                    <th scope="row"></th>
                                     <td>限制目標狀態效果</td>
                                     <td>設置目標狀態效果的顯示數量上限。</td>
                                 </tr>
                                 <tr>
-                                    <th scope="row">19</th>
+                                    <th scope="row"></th>
                                     <td>鎖定窗口位置</td>
                                     <td>允許鎖定大部分界面窗口的位置</td>
                                 </tr>
                                 <tr>
-                                    <th scope="row">20</th>
+                                    <th scope="row"></th>
                                     <td>市場相關設置</td>
                                     <td>市場交易板相關的U設置,例如含稅價格、與NPC售價的差價等。</td>
                                 </tr>
                                 <tr>
-                                    <th scope="row">21</th>
+                                    <th scope="row"></th>
                                     <td>小地圖修改</td>
                                     <td>隱藏和修改小地圖元素</td>
                                 </tr>
                                 <tr>
-                                    <th scope="row">22</th>
+                                    <th scope="row"></th>
                                     <td>彈出通知修改</td>
                                     <td>允許移動或隱藏在不同時間出現在屏幕中間的通知</td>
                                 </tr>
                                 <tr>
-                                    <th scope="row">23</th>
+                                    <th scope="row"></th>
                                     <td>舊版姓名牌優化</td>
                                     <td>重置姓名牌的更改。</td>
                                 </tr>
                                 <tr>
-                                    <th scope="row">24</th>
+                                    <th scope="row"></th>
                                     <td>狀態欄調整</td>
                                     <td>隱藏或移動特殊的狀態欄(體力、魔力)</td>
                                 </tr>
                                 <tr>
-                                    <th scope="row">25</th>
+                                    <th scope="row"></th>
                                     <td>小隊列表狀態計時器</td>
                                     <td>對小隊列表的狀態欄，添加倒計時</td>
                                 </tr>
                                 <tr>
-                                    <th scope="row">26</th>
+                                    <th scope="row"></th>
                                     <td>精筒死宮UI信息</td>
                                     <td>刪除死宮角色面板中的冗餘信息。</td>
                                 </tr>
                                 <tr>
-                                    <th scope="row">27</th>
+                                    <th scope="row"></th>
                                     <td>記憶稱號排序方式</td>
                                     <td>在稱號選擇界面記憶已被選擇的排序方式。</td>
                                 </tr>
                                 <tr>
-                                    <th scope="row">28</th>
+                                    <th scope="row"></th>
                                     <td>記憶稱號排序方式</td>
                                     <td>在稱號選擇界面記憶已被選擇的排序方式。</td>
                                 </tr>
                                 <tr>
-                                    <th scope="row">29</th>
+                                    <th scope="row"></th>
                                     <td>移除”尋找同好“按鍵</td>
                                     <td>隱藏個人信息窗口中的尋找同好按鍵。</td>
                                 </tr>
                                 <tr>
-                                    <th scope="row">30</th>
+                                    <th scope="row"></th>
                                     <td>Remove Quest Marker Limit</td>
-                                    <td>允許任務列表顯示超過5個任務</td>
+                                    <td>允許地圖顯示超過5個任務</td>
                                 </tr>
                                 <tr>
-                                    <th scope="row">31</th>
+                                    <th scope="row"></th>
                                     <td>調整詠唱條文本位置</td>
                                     <td>移動詠唱條的文字內容使其更容易閱讀</td>
                                 </tr>
                                 <tr>
-                                    <th scope="row">32</th>
+                                    <th scope="row"></th>
                                     <td>HP欄上顯示盾值</td>
                                     <td>在HP欄顯示大致的盾值。</td>
                                 </tr>
                                 <tr>
-                                    <th scope="row">33</th>
+                                    <th scope="row"></th>
                                     <td>顯示經驗值百分比</td>
                                     <td>計算當前經驗值，並以百分比形式顯示在經驗值旁邊</td>
                                 </tr>
                                 <tr>
-                                    <th scope="row">34</th>
+                                    <th scope="row"></th>
                                     <td>Show Gil in Inventory</td>
                                     <td>在背包底下顯示有多少錢</td>
                                 </tr>
                                 <tr>
-                                    <th scope="row">35</th>
+                                    <th scope="row"></th>
                                     <td>智能隐藏姓名板</td>
                                     <td>提供在戰鬥中隱藏特定目標姓名板的選項</td>
                                 </tr>
                                 <tr>
-                                    <th scope="row">36</th>
+                                    <th scope="row"></th>
                                     <td>目標HP</td>
                                     <td>顯示目標的精確(或者近似)HP值。</td>
                                 </tr>
                                 <tr>
-                                    <th scope="row">37</th>
+                                    <th scope="row"></th>
                                     <td>GP回復計時</td>
                                     <td>顯示採集職業GP回復到最大值所需的大致時間。</td>
                                 </tr>
                                 <tr>
-                                    <th scope="row">38</th>
+                                    <th scope="row"></th>
                                     <td>副本等待計時</td>
                                     <td>顯示匹配到副本後的45秒倒計時。</td>
                                 </tr>
