--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-TW">
 
 <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -83,8 +83,10 @@
                         loading="lazy">
                 </div>
             </div>
+            <!-- 固定寬度col-lg-10 -->
+            <div class="col-lg-10 mx-auto">
             <!-- 功能介紹卡片 -->
-            <div class="row mx-auto col-lg-10 justify-content-center py-5 function">
+            <div class="row justify-content-center py-5 function indexFormat" id="card_menu">
 
                 <div class="card col-md-2 col-5 shadow-sm" data-aos="flip-left">
                     <i class="bi bi-menu-button-wide-fill text-center mt-3 fs-1"></i>
@@ -112,6 +114,7 @@
                         <li class="list-group-item"><a href="plugins_att.html#RezPls">屍體有誰拉★</a></li>
                         <li class="list-group-item"><a href="plugins_att.html#Waymark">標點儲存★★★</a></li>
                         <li class="list-group-item"><a href="plugins_att.html#GentleTouch">手把震動</a></li>
+                        <li class="list-group-item"><a href="plugins_att.html#jobBars">技能監控</a></li>
                     </ul>
                 </div>
                 <div class="card col-md-2 col-5  shadow-sm" data-aos="flip-left">
@@ -165,84 +168,85 @@
                     </ul>
                 </div>
             </div>
-
-            <h3 class="smalltitle mb-4 col-lg-10 mx-auto ">基本安裝</h3>
-            <div class="accordion accordion-flush col-lg-10 mx-auto pb-5" id="accordionExample" data-aos="fade-up" data-aos-offset="50">
-                <div class="accordion-item">
-                    <h2 class="accordion-header" id="headingOne">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-                            安裝說明
-                        </button>
-                    </h2>
-                    <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne"
-                        data-bs-parent="#accordionExample">
-                        <div class="accordion-body">
-                            <div class="mx-auto text-center">
-                                <a href="image/xl install 01.jpg" target="_blank"><img src="image/xl install 01.jpg"
-                                        class="img-fluid border rounded-3 mb-3" alt="" loading="lazy" width="600"></a>
-                                <p class="mb-5 mx-sm-5">點擊連結後再點選最上面日期的紅框處exe檔案，安裝，有跳出更新視窗確定即可。</p>
-                                <a href="image/xl install 02.jpg" target="_blank"><img src="image/xl install 02.jpg"
-                                        class="img-fluid border rounded-3 mb-3" alt="" loading="lazy"></a>
-                                <p class="mb-5 mx-sm-5">
-                                    選擇包含game和boot的遊戲路徑，他不會自動幫你偵測，有安裝在D槽的人記得更改路徑，steam版本要勾選下面選項，剩下基本上一直下一步就好。</p>
-                                <a href="image/xl install 03.jpg" target="_blank"><img src="image/xl install 03.jpg"
-                                        class="img-fluid border rounded-3 mb-3" alt="" loading="lazy"></a>
-                                <p class="mb-5 mx-sm-5">紅框處可以記憶其他帳號，如果勾選自動登入，Loading畫面按住Shift即可</p>
+            <div class="indexFixFormat" id="install">
+                <h3 class="smalltitle mb-4 indexFormat">基本安裝</h3>
+                <div class="accordion accordion-flush pb-5 indexFormat" id="accordionExample" data-aos="fade-up" data-aos-offset="50">
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="headingOne">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                                安裝說明
+                            </button>
+                        </h2>
+                        <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne"
+                            data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                <div class="mx-auto text-center">
+                                    <a href="image/xl install 01.jpg" target="_blank"><img src="image/xl install 01.jpg"
+                                            class="img-fluid border rounded-3 mb-3" alt="" loading="lazy" width="600"></a>
+                                    <p class="mb-5 mx-sm-5">點擊連結後再點選最上面日期的紅框處exe檔案，安裝，有跳出更新視窗確定即可。</p>
+                                    <a href="image/xl install 02.jpg" target="_blank"><img src="image/xl install 02.jpg"
+                                            class="img-fluid border rounded-3 mb-3" alt="" loading="lazy"></a>
+                                    <p class="mb-5 mx-sm-5">
+                                        選擇包含game和boot的遊戲路徑，他不會自動幫你偵測，有安裝在D槽的人記得更改路徑，steam版本要勾選下面選項，剩下基本上一直下一步就好。</p>
+                                    <a href="image/xl install 03.jpg" target="_blank"><img src="image/xl install 03.jpg"
+                                            class="img-fluid border rounded-3 mb-3" alt="" loading="lazy"></a>
+                                    <p class="mb-5 mx-sm-5">紅框處可以記憶其他帳號，如果勾選自動登入，Loading畫面按住Shift即可</p>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="accordion-item">
-                    <h2 class="accordion-header" id="headingTwo">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                            遊戲內設定
-                        </button>
-                    </h2>
-                    <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
-                        data-bs-parent="#accordionExample">
-                        <div class="accordion-body">
-                            <div class="mx-auto text-center">
-                                <p class="mx-5">一般設定</p>
-                                <a href="image/xl setting 01.jpg" target="_blank"><img src="image/xl setting 01.jpg"
-                                        class="img-fluid border rounded-3 mb-3" alt="" loading="lazy" width="700"></a>
-                                <p class="mx-5">外觀設定</p>
-                                <a href="image/xl setting 02.jpg" target="_blank"><img src="image/xl setting 02.jpg"
-                                        class="img-fluid border rounded-3 mb-3" alt="" loading="lazy" width="700"></a>
-                                <p class="mx-sm-5">後面兩個一個是頂部的bar，遊戲內可使用"/xldev"呼叫出一個頂部控制bar，最後一個標籤是使用正在測試中未上架的插件。</p>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="headingTwo">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                遊戲內設定
+                            </button>
+                        </h2>
+                        <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                            data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                <div class="mx-auto text-center">
+                                    <p class="mx-5">一般設定</p>
+                                    <a href="image/xl setting 01.jpg" target="_blank"><img src="image/xl setting 01.jpg"
+                                            class="img-fluid border rounded-3 mb-3" alt="" loading="lazy" width="700"></a>
+                                    <p class="mx-5">外觀設定</p>
+                                    <a href="image/xl setting 02.jpg" target="_blank"><img src="image/xl setting 02.jpg"
+                                            class="img-fluid border rounded-3 mb-3" alt="" loading="lazy" width="700"></a>
+                                    <p class="mx-sm-5">後面兩個一個是頂部的bar，遊戲內可使用"/xldev"呼叫出一個頂部控制bar，最後一個標籤是使用正在測試中未上架的插件。</p>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="accordion-item">
-                    <h2 class="accordion-header" id="headingThree">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                            加載第三方程式庫方法
-                        </button>
-                    </h2>
-                    <div id="collapseThree" class="accordion-collapse collapse autoopen" aria-labelledby="headingThree"
-                        data-bs-parent="#accordionExample">
-                        <div class="accordion-body">
-                            <div class="mx-auto text-center">
-                                <p class="mx-sm-5">安裝插件版程式前，請先確認是否有安裝同作者同功能的獨立版程式，<a
-                                        href="https://github.com/LeonBlade/DalamudPlugins">詳細請見此</a><br>
-                                    確保在啟動器設置中打開“啟用遊戲內功能”以訪問遊戲內命令和功能！(可使用"/xlplugins"等指令)</p>
-                                <a href="image/moreplugins01.jpg" target="_blank"><img src="image/moreplugins01.jpg"
-                                        class="img-fluid border rounded-3 mb-3" alt="" loading="lazy" width="700"></a>
-                                <p class="mx-sm-5">到Dalamud設定介面的最後一個標籤頁，URL的地方貼上第三方程式庫的位址，按一下"+"<br>
-                                    Enabled那欄會變成"√"</p>
-                                <a href="image/moreplugins02.jpg" target="_blank"><img src="image/moreplugins02.jpg"
-                                        class="img-fluid border rounded-3 mb-3" alt="" loading="lazy" width="700"></a>
-                                <p class="mx-sm-5">回到插件管理頁面，會發現多了新增的插件，此時需要點擊安裝，即可使用。</p>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="headingThree">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                加載第三方程式庫方法
+                            </button>
+                        </h2>
+                        <div id="collapseThree" class="accordion-collapse collapse autoopen" aria-labelledby="headingThree"
+                            data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                <div class="mx-auto text-center">
+                                    <p class="mx-sm-5">安裝插件版程式前，請先確認是否有安裝同作者同功能的獨立版程式，<a
+                                            href="https://github.com/LeonBlade/DalamudPlugins">詳細請見此</a><br>
+                                        確保在啟動器設置中打開“啟用遊戲內功能”以訪問遊戲內命令和功能！(可使用"/xlplugins"等指令)</p>
+                                    <a href="image/moreplugins01.jpg" target="_blank"><img src="image/moreplugins01.jpg"
+                                            class="img-fluid border rounded-3 mb-3" alt="" loading="lazy" width="700"></a>
+                                    <p class="mx-sm-5">到Dalamud設定介面的最後一個標籤頁，URL的地方貼上第三方程式庫的位址，按一下"+"<br>
+                                        Enabled那欄會變成"√"</p>
+                                    <a href="image/moreplugins02.jpg" target="_blank"><img src="image/moreplugins02.jpg"
+                                            class="img-fluid border rounded-3 mb-3" alt="" loading="lazy" width="700"></a>
+                                    <p class="mx-sm-5">回到插件管理頁面，會發現多了新增的插件，此時需要點擊安裝，即可使用。</p>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <h3 class="smalltitle mb-4 col-lg-10 mx-auto ">分享連結</h3>
-            <div class="row share-link col-lg-10 mx-auto mb-5 px-0" data-aos="fade-up">
+            <h3 class="smalltitle mb-4">分享連結</h3>
+            <div class="row share-link mb-5 px-0" data-aos="fade-up">
 
                 <div class="col-md-4">
                     <div class="card">
@@ -289,6 +293,7 @@
                     </div>
                 </div>
             </div>
+            </div>
         </div>
     </div>
     </div>
@@ -305,6 +310,9 @@
         AOS.init();
     </script>
     <script src="https://kit.fontawesome.com/f82903dd99.js" crossorigin="anonymous"></script>
+    <!-- jq -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="js/index.js"></script>
 </body>
 
 </html>
