--- a/plugins_att.html
+++ b/plugins_att.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-TW">
 
 <head>
     
@@ -105,6 +105,36 @@
                     </div>
                     <p>手把震動功能<br>
                     可以設定技能CD好、靠近以太風流時震動</p>
+                </div>
+                <div class="commonFormat mt-5" id="jobBars">
+                    <div class="plugintitle d-flex align-items-center mb-3">
+                        <h6 class="fs-4 d-inline mb-0 me-3">JobBars</h6>
+                        <a href="https://github.com/0ceal0t/JobBars" class="btn btn-outline-secondary"
+                            role="button">插件原網址</a>
+                    </div>
+                    <p>監控技能Buff、冷卻時間、隊友的技能CD<br>
+                    原網址有詳細示範影片，這邊就介面稍微介紹一下</p>
+                    <img src="image/jobbars01.jpg" alt=""  class="img-fluid imagebigback">
+                    <div class="row my-4">
+                        <div class="col-md-4">
+                            <p class="mb-1">buff監控，可設秒數</p>
+                            <a href="image/jobbars02.jpg" target="_blank">
+                                <img src="image/jobbars02.jpg" alt="" class="img-fluid mb-2 imgnoJq" width="100%"></a>
+                        </div>
+                        <div class="col-md-4">
+                            <p class="mb-1">監控技能CD</p>
+                            <a href="image/jobbars03.jpg" target="_blank">
+                                <img src="image/jobbars03.jpg" alt="" class="img-fluid mb-2 imgnoJq" width="100%"></a>
+                        </div>
+                        <div class="col-md-4">
+                            <p class="mb-1">隊友技能監控</p>
+                            <video src="https://user-images.githubusercontent.com/18051158/130377610-86fb7e17-9780-4827-81df-0739908bd709.mp4" data-canonical-src="https://user-images.githubusercontent.com/18051158/130377610-86fb7e17-9780-4827-81df-0739908bd709.mp4" controls="controls" muted="muted" class="d-block rounded-bottom-2 border-top width-fit" style="max-height:640px;">
+
+                            </video>
+                        </div>
+                    </div>
+                    <p>隊友的冷卻時間設定</p>
+                    <img src="image/jobbars04.jpg" alt=""  class="img-fluid imagebigback">
                 </div>
             </div>
         </div>
