增加字體庫衝突問題、小提醒調整

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     </symbol>
                   </svg>
 
-                <div class="col-lg-8 mx-auto">
+                <div class="col-lg-8 mx-auto py-2">
                     <div class="alert alert-primary d-flex align-items-center justify-content-center mb-4 fs-6 fw-bold" role="alert">
                         <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Info:"><use xlink:href="#info-fill"/></svg>
                         <div class="div">
