--- a/plugins_att.html
+++ b/plugins_att.html
@@ -128,7 +128,7 @@
                         </div>
                         <div class="col-md-4">
                             <p class="mb-1">隊友技能監控</p>
-                            <video src="https://user-images.githubusercontent.com/18051158/130377610-86fb7e17-9780-4827-81df-0739908bd709.mp4" data-canonical-src="https://user-images.githubusercontent.com/18051158/130377610-86fb7e17-9780-4827-81df-0739908bd709.mp4" controls="controls" muted="muted" class="d-block rounded-bottom-2 border-top width-fit" style="max-height:640px;">
+                            <video src="https://user-images.githubusercontent.com/18051158/130377610-86fb7e17-9780-4827-81df-0739908bd709.mp4" data-canonical-src="https://user-images.githubusercontent.com/18051158/130377610-86fb7e17-9780-4827-81df-0739908bd709.mp4" controls="controls" muted="muted" class="d-block rounded-bottom-2 border-top width-fit" style="width: 100%;">
 
                             </video>
                         </div>
