--- a/plugins_tweak.html
+++ b/plugins_tweak.html
@@ -66,6 +66,21 @@
                             id="myInput" aria-describedby="basic-addon2">
                         <button onclick="myFunction()" class="input-group-text" id="basic-addon2">複製</button>
                     </div>
+                    <div class="alert alert-warning py-2 d-flex align-items-center" role="alert">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-exclamation-triangle-fill flex-shrink-0 me-2" viewBox="0 0 16 16" role="img" aria-label="Warning:">
+                          <path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+                        </svg>
+                        <div>
+                          已知問題：跟Dalamud設定頁面、ping插件存在衝突，可以試試獺爹的連結
+                        </div>
+                      </div>
+                      <label for="basic-url" class="form-label">獺爹防亂碼</label>
+                      <div class="input-group mb-3">
+                          <input type="text" class="form-control"
+                              value="https://gist.githubusercontent.com/Bluefissure/f2b96d28d4296262b625956f14106b6c/raw/b252a9e6153b61a51d18984511427823b29e60ba/DalamudFontReplacer_repo.json"
+                              id="myInput" aria-describedby="basic-addon2">
+                          <button onclick="myFunction()" class="input-group-text" id="basic-addon2">複製</button>
+                      </div>
                     <p><a href="index.html#headingThree" target="_blank">安裝方法</a>，安裝後搜尋列表DalamudFontReplacer<br>
                         便利小插件合集，<a href="https://github.com/Caraxi/SimpleTweaksPlugin">部分使用說明(插件網址)</a><br>
                         這插件怎麼一直在更新阿更新不完！！</p>
