--- a/plugins_ui.html
+++ b/plugins_ui.html
@@ -90,6 +90,9 @@
                         <a href="https://git.annaclemens.io/ascclemens/GoodMemory" class="btn btn-outline-secondary"
                         target="_blank" role="button">插件原網址</a>
                     </div>
+                    <div class="alert alert-warning py-2" role="alert">
+                        6.1更新了類似的功能
+                      </div>
                     <p>在物品底部區域標註是否已解鎖，只會出現在如樂譜、寵物等可以解鎖物品中。</p>
                     <img src="image/xl setting 04.jpg" alt="" class="img-fluid imagebigback">
                 </div>
@@ -133,14 +136,14 @@
                     點選導入會導入剪貼簿的代碼，所以點擊導入之前先複製需要導入的代碼到剪貼簿。</p>
                     <p class="fs-5 text-muted fw-bold mt-3">Shortcut設定</p>
                     <img src="image/qol03.jpg" alt=""      class="img-fluid imagebigback">
-                    <ul class="pb-4">
+                    <ul class="py-2">
                         <li>Name－"::"後面的數字是icon編號，點右下角放大鏡可以打開icon資源庫，後面加"##"(顯示的名稱)滑鼠移入可顯示提示</li>
                         <li>Command－類似寫巨集的地方，可以寫指令，右鍵可以添加遊戲內特殊符號<br>
                         另外可以使用"//m巨集的編號"來快捷使用巨集，如果要使用角色共享巨集，需要+100，例如要使用共享MACRO#0，則需要輸入"//m100"</li>
                         <li>Mode－Command執行的方式（應該）</li>
-                        <li>旁邊兩個頁籤－Category是下拉選單才有的設定，可以調整選單寬度、一行幾個、大小間距，下面的選項Hover=滑鼠移入時，可以設定點選打開或滑入打開/關閉，跟不要背景；Icon就是外觀微調</li>
+                        <li>旁邊兩個頁籤－Category是下拉選單才有的設定，可以調整選單寬度(Width)、一行幾個(Column)、大小間距(Scale、Spacing)，下面的選項Hover=滑鼠移入時，可以設定點選打開或滑入打開/關閉，跟不要背景；Icon就是外觀微調</li>
                     </ul>
-                    <p class="fs-5 text-muted fw-bold mt-3">巨集指令</p>
+                    <p class="fs-5 text-muted fw-bold mt-3">巨集指令(導入前建議勾選Settings底下兩個Allow開投的選項)</p>
                     <table class="table table-hover have_code">
                         <thead>
                             <tr>
