--- a/plugins_tweak.html
+++ b/plugins_tweak.html
@@ -78,8 +78,8 @@
                       <div class="input-group mb-3">
                           <input type="text" class="form-control"
                               value="https://gist.githubusercontent.com/Bluefissure/f2b96d28d4296262b625956f14106b6c/raw/b252a9e6153b61a51d18984511427823b29e60ba/DalamudFontReplacer_repo.json"
-                              id="myInput" aria-describedby="basic-addon2">
-                          <button onclick="myFunction()" class="input-group-text" id="basic-addon2">複製</button>
+                              id="myInput2" aria-describedby="basic-addon3">
+                          <button onclick="myFunction2()" class="input-group-text" id="basic-addon3">複製</button>
                       </div>
                     <p><a href="index.html#headingThree" target="_blank">安裝方法</a>，安裝後搜尋列表DalamudFontReplacer<br>
                         便利小插件合集，<a href="https://github.com/Caraxi/SimpleTweaksPlugin">部分使用說明(插件網址)</a><br>
