--- a/plugins_att.html
+++ b/plugins_att.html
@@ -37,8 +37,8 @@
         integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/fix.css">
-    <link href="css/all.css" rel="stylesheet">
+
+    <link href="css/all-sc.css" rel="stylesheet">
 
     <title>Dalamud｜戰鬥相關－亞馬烏羅提後花園</title>
 
@@ -96,15 +96,6 @@
                     <p>解除場地標點只能儲存五個的限制<br>
                     "/pwaymark"呼叫標點儲存視窗</p>
                     <img src="image/pwaymark.jpg" alt="" class="img-fluid imagebigback">
-                </div>
-                <div class="commonFormat mt-5" id="GentleTouch">
-                    <div class="plugintitle d-flex align-items-center mb-3">
-                        <h6 class="fs-4 d-inline mb-0 me-3">GentleTouch</h6>
-                        <a href="https://github.com/fitzchivalrik/gentletouch" class="btn btn-outline-secondary"
-                            role="button">插件原網址</a>
-                    </div>
-                    <p>手把震動功能<br>
-                    可以設定技能CD好、靠近以太風流時震動</p>
                 </div>
                 <div class="commonFormat mt-5" id="jobBars">
                     <div class="plugintitle d-flex align-items-center mb-3">
