--- a/report.html
+++ b/report.html
@@ -36,8 +36,9 @@
         integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/fix.css">
+
     <link href="css/all.css" rel="stylesheet">
+    <link href="css/all-sc.css" rel="stylesheet">
 
     <title>Dalamud｜意見回報－亞馬烏羅提後花園</title>
 </head>
