增加懶人combo、刪除無法使用的中文

--- a/plugins_att.html
+++ b/plugins_att.html
@@ -66,6 +66,7 @@
                     <p>讓連續的技能放在同一個技能欄中，改成combo模式。
                     職業分開設定，可自行勾選哪個技能要使用這個效果。<br>
                     例如Draw on Play可以讓抽牌跟發牌使用同一個按鍵，快捷欄圖案會變成5抽牌的圖案。</p>
+                    <p>需要更懶人的版本可以參照<a href="https://docs.google.com/spreadsheets/d/1hCwuz1hUmH5cnN1o0zLA3nxRR6w9f6ltpWv3JNkE8VI/edit?usp=sharing" target="_blank">這裡</a></p>
                     <img src="image/xl setting 06.jpg" alt="" class="img-fluid imagebigback">
                 </div>
                 <div class="commonFormat mt-5" id="BigPlayerDebuffs">
