--- a/plugins_convenient.html
+++ b/plugins_convenient.html
@@ -38,7 +38,7 @@
     
     <link href="css/all-sc.css" rel="stylesheet">
 
-    <title>Dalamud｜便利功能－亞馬烏羅提後花園</title>
+    <title>Dalamud｜改善遊戲體驗－亞馬烏羅提後花園</title>
 </head>
 
 
