--- a/plugins_tweak.html
+++ b/plugins_tweak.html
@@ -60,7 +60,7 @@
                         <a href="https://github.com/Caraxi/SimpleTweaksPlugin" class="btn btn-outline-secondary"
                             target="_blank" role="button">插件原網址</a>
                     </div>
-                    <label for="basic-url" class="form-label">防止亂碼可以添加Akira的第三方插件庫URL</label>
+                    <label for="basic-url" class="form-label">防止亂碼可以添加Akira的第三方插件庫URL(更新6.1後無法使用)</label>
                     <div class="input-group mb-3">
                         <input type="text" class="form-control"
                             value="https://raw.githubusercontent.com/akira0245/DalamudPlugins/api4/pluginmaster.json"
@@ -75,13 +75,7 @@
                           已知問題：跟Dalamud設定頁面、ping插件存在衝突，可以試試獺爹的連結
                         </div>
                       </div>
-                      <label for="basic-url" class="form-label">獺爹防亂碼</label>
-                      <div class="input-group mb-3">
-                          <input type="text" class="form-control"
-                              value="https://gist.githubusercontent.com/Bluefissure/f2b96d28d4296262b625956f14106b6c/raw/b252a9e6153b61a51d18984511427823b29e60ba/DalamudFontReplacer_repo.json"
-                              id="myInput2" aria-describedby="basic-addon3">
-                          <button onclick="myFunction2()" class="input-group-text" id="basic-addon3">複製</button>
-                      </div>
+
                     <p><a href="index.html#headingThree" target="_blank">安裝方法</a>，安裝後搜尋列表DalamudFontReplacer<br>
                         便利小插件合集，<a href="https://github.com/Caraxi/SimpleTweaksPlugin">部分使用說明(插件網址)</a><br>
                         這插件怎麼一直在更新阿更新不完！！</p>
