--- a/index.html
+++ b/index.html
@@ -71,9 +71,8 @@
                             <use xlink:href="#info-fill" />
                         </svg>
                         <div class="div">
-                            6.1可以使用插件了，但有些插件還沒更新到支援API6，需等待原作者更新＆有許多第三方插件不支援
-                            <!-- 6.1更新目前還無法使用插件！
-                            <a class="" href="https://discord.gg/3NMcUV5">更新通知可以加入Dalamud DC</a> -->
+                            6.11絕讚更新中目前還無法使用插件！
+                            <a class="" href="https://discord.gg/3NMcUV5">更新通知可以加入Dalamud DC</a>
                         </div>
                     </div>
                     <!-- banner -->
